// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal/LoginModal create account error 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal forgotten password modal control 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
        <div
          className="ReactModal__Overlay ReactModal__Overlay--after-open"
          onClick={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.75)",
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            aria-modal={true}
            className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
            id="forgottenPasswordModal"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            role="dialog"
            style={Object {}}
            tabIndex="-1"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <button
                  aria-label="Close"
                  className="close"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="glyphicon glyphicon-remove"
                  />
                </button>
                <h4
                  className="modal-title"
                >
                  Reset Password
                </h4>
              </div>
              <div
                className="modal-body"
                style={
                  Object {
                    "maxHeight": "55vh",
                    "overflowY": "auto",
                  }
                }
              >
                <div
                  className="container-fluid"
                >
                  <p>
                    Enter your email address to reset your password.
                  </p>
                  <form
                    onSubmit={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="loginEmail"
                      >
                        Email address
                      </label>
                      <input
                        className="form-control"
                        id="loginEmail"
                        onChange={[Function]}
                        placeholder="Email address"
                        type="email"
                        value=""
                      />
                    </div>
                    <button
                      className="btn btn-default"
                      type="submit"
                    >
                      Submit
                    </button>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal forgotten password modal control 2`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content ReactModal__Content--after-open Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path create account 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path create account 2`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path login 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path login 2`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal login error 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal renders closed 1`] = `null`;

exports[`components/modal/LoginModal renders error 1`] = `
<div
  className="ReactModal__Overlay"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    aria-modal={true}
    className="ReactModal__Content Modal__Bootstrap modal-dialog modal-lg"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            className="glyphicon glyphicon-remove"
          />
        </button>
        <h4
          className="modal-title"
        >
          Sign in/Create account
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "55vh",
            "overflowY": "auto",
          }
        }
      >
        <div
          className="container-fluid"
        >
          <p>
            Signing in will sync your settings across multiple browsers or devices.
          </p>
          <p>
            When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
          </p>
          <form
            onSubmit={[Function]}
          >
            <div
              className="alert alert-warning alert-dismissible"
              role="alert"
            >
              <button
                aria-label="Close"
                className="close"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="glyphicon glyphicon-remove"
                />
              </button>
              Error message
            </div>
            <div>
              <button
                className="btn"
                id="googleSignIn"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt="Google logo"
                  src="test-file-stub"
                  style={
                    Object {
                      "marginInlineEnd": 6,
                    }
                  }
                />
                Sign in with Google
              </button>
            </div>
            <h3>
              Sign in with email
            </h3>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginEmail"
              >
                Email address
              </label>
              <input
                autoComplete="username"
                className="form-control"
                id="loginEmail"
                onChange={[Function]}
                placeholder="Email address"
                type="email"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="loginPassword"
              >
                Password
              </label>
              <input
                autoComplete="current-password"
                className="form-control"
                id="loginPassword"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <a
                href=""
                id="buttonOpenForgottenPassword"
                onClick={[Function]}
              >
                Forgotten password?
              </a>
            </div>
            <div>
              <button
                className="btn btn-default"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn"
                id="createAccountButton"
                onClick={[Function]}
                style={
                  Object {
                    "marginInlineStart": 6,
                  }
                }
                type="button"
              >
                Create account
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal renders loading 1`] = `null`;
